--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.66.4",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^13.0.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
     "react-native-splash-screen": "^3.3.0",
