--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-native-screens": "^3.10.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.0.0",
+    "react-native-webview": "11.14.4",
+    "react-native-youtube-iframe": "^2.2.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
